--- a/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.15.0/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/manifests/0.15.0/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -1,8 +1,10 @@
+---
+# Source: olm/templates/0000_50_olm_08-catalog-operator.deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: catalog-operator
-  namespace: openshift-operator-lifecycle-manager
+  namespace: olm
   labels:
     app: catalog-operator
 spec:
@@ -18,23 +20,16 @@ spec:
         app: catalog-operator
     spec:
       serviceAccountName: olm-operator-serviceaccount
-      priorityClassName: "system-cluster-critical"
       containers:
         - name: catalog-operator
           command:
           - /bin/catalog
           args:
           - '-namespace'
-          - openshift-marketplace
+          - olm
           - -configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
           - -util-image
           -  quay.io/operator-framework/olm@sha256:788915592f42882559a63c39e14ef211f64c93f31983ea67136533c7983f2896
-          - -writeStatusName
-          - operator-lifecycle-manager-catalog
-          - -tls-cert
-          - /var/run/secrets/serving-cert/tls.crt
-          - -tls-key
-          - /var/run/secrets/serving-cert/tls.key
           image: quay.io/operator-framework/olm@sha256:788915592f42882559a63c39e14ef211f64c93f31983ea67136533c7983f2896
           imagePullPolicy: IfNotPresent
           ports:
@@ -53,36 +48,11 @@ spec:
           terminationMessagePolicy: FallbackToLogsOnError
           env:
           
-          - name: RELEASE_VERSION
-            value: "0.0.1-snapshot"
-          
           resources:
             requests:
               cpu: 10m
               memory: 80Mi
           
-          volumeMounts:
-          - mountPath: /var/run/secrets/serving-cert
-            name: serving-cert
-          
-      
-      volumes:
-      - name: serving-cert
-        secret:
-          secretName: catalog-operator-serving-cert
       
       nodeSelector:
         beta.kubernetes.io/os: linux
-        node-role.kubernetes.io/master: ""
-      tolerations:
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/master
-        operator: Exists
-      - effect: NoExecute
-        key: node.kubernetes.io/unreachable
-        operator: Exists
-        tolerationSeconds: 120
-      - effect: NoExecute
-        key: node.kubernetes.io/not-ready
-        operator: Exists
-        tolerationSeconds: 120
