--- a/staging/operator-lifecycle-manager/deploy/ocp/manifests/0.15.1/0000_50_olm_00-subscriptions.crd.yaml
+++ b/staging/operator-lifecycle-manager/deploy/ocp/manifests/0.15.1/0000_50_olm_00-subscriptions.crd.yaml
@@ -1,5 +1,5 @@
 ---
-# Source: olm/crds/0000_50_olm_00-subscriptions.yaml
+# Source: olm/crds/0000_50_olm_00-subscriptions.crd.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
