beta.kubernetes.io/os deprecated since v1.14, removed in v1.19
**Description of the change:**

Switch to supported os node selector, beta one is deprecated AND removed now.

**Motivation for the change:**

https://github.com/kubernetes/kubernetes/pull/89460

**Reviewer Checklist**
- [x] Implementation matches the proposed design, or proposal is updated to match implementation
- [x] Sufficient unit test coverage
- [x] Sufficient end-to-end test coverage
- [x] Docs updated or added to `/docs`
- [x] Commit messages sensible and descriptive

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 5ffe1d304b1b555b2ec7465a2a1132807108fcd8

--- a/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
+++ b/staging/operator-lifecycle-manager/deploy/upstream/quickstart/olm.yaml
@@ -85,7 +85,7 @@ spec:
               port: 8080
           terminationMessagePolicy: FallbackToLogsOnError
           env:
-        
+
           - name: OPERATOR_NAMESPACE
             valueFrom:
               fieldRef:
@@ -96,10 +96,10 @@ spec:
             requests:
               cpu: 10m
               memory: 160Mi
-          
-      
+
+
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -148,15 +148,15 @@ spec:
               port: 8080
           terminationMessagePolicy: FallbackToLogsOnError
           env:
-          
+
           resources:
             requests:
               cpu: 10m
               memory: 80Mi
-          
-      
+
+
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -285,7 +285,7 @@ spec:
             spec:
               serviceAccountName: olm-operator-serviceaccount
               nodeSelector:
-                beta.kubernetes.io/os: linux
+                kubernetes.io/os: linux
               containers:
               - name: packageserver
                 command:
