--- a/staging/operator-lifecycle-manager/deploy/chart/values.yaml
+++ b/staging/operator-lifecycle-manager/deploy/chart/values.yaml
@@ -15,7 +15,7 @@ olm:
   service:
     internalPort: 8080
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
   resources:
     requests:
      cpu: 10m
@@ -30,7 +30,7 @@ catalog:
   service:
     internalPort: 8080
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
   resources:
     requests:
      cpu: 10m
@@ -44,7 +44,7 @@ package:
   service:
     internalPort: 5443
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
   resources:
     requests:
      cpu: 10m
