--- a/staging/operator-lifecycle-manager/deploy/ocp/values.yaml
+++ b/staging/operator-lifecycle-manager/deploy/ocp/values.yaml
@@ -15,7 +15,7 @@ olm:
   service:
     internalPort: 8080
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
   tolerations:
   - key: node-role.kubernetes.io/master
@@ -43,7 +43,7 @@ catalog:
   service:
     internalPort: 8080
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
   tolerations:
   - key: node-role.kubernetes.io/master
@@ -69,7 +69,7 @@ package:
   service:
     internalPort: 5443
   nodeSelector:
-    beta.kubernetes.io/os: linux
+    kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
   tolerations:
   - key: node-role.kubernetes.io/master
