Add workflow to save e2e test artifacts
This commit uploads e2e testing results to OLM repo
artifect for 90 days for test flak analysis.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 0d03681c6440c9292ebee3381254d6103698381e

--- a/staging/operator-lifecycle-manager/.github/workflows/e2e-tests.yml
+++ b/staging/operator-lifecycle-manager/.github/workflows/e2e-tests.yml
@@ -9,4 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: make -f x.mk e2e-local NODES=2
+      - run: make -f x.mk e2e-local NODES=2 JUNIT_DIRECTORY=./artifacts/
+      - name: Archive production artifacts # test results are only uploaded if any of the e2e tests fails
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: e2e-test-output-${{ github.sha }}-${{ github.run_id }}
+          path: ${{ github.workspace }}/bin/artifacts/*
