--- a/staging/api/Makefile
+++ b/staging/api/Makefile
@@ -12,7 +12,7 @@ endif
 REPO = github.com/operator-framework/api
 BUILD_PATH = $(REPO)/cmd/operator-verify
 PKGS = $(shell go list ./... | grep -v /vendor/)
-YQ := $(Q) go run $(MOD_FLAGS) ./vendor/github.com/mikefarah/yq/v2/
+YQ := go run $(MOD_FLAGS) ./vendor/github.com/mikefarah/yq/v2/
 
 .PHONY: help
 help: ## Show this help screen
@@ -61,14 +61,17 @@ manifests: controller-gen ## Generate manifests e.g. CRD, RBAC etc
 	$(CONTROLLER_GEN) schemapatch:manifests=./crds output:dir=./crds paths=./pkg/operators/...
 
 	@# Add missing defaults in embedded core API schemas
-	$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.spec.properties.containers.items.properties.ports.items.properties.protocol.default TCP
-	$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.spec.properties.initContainers.items.properties.ports.items.properties.protocol.default TCP
+	$(Q)$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.spec.properties.containers.items.properties.ports.items.properties.protocol.default TCP
+	$(Q)$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.spec.properties.initContainers.items.properties.ports.items.properties.protocol.default TCP
 
 	@# Preserve fields for embedded metadata fields
-	$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.metadata.x-kubernetes-preserve-unknown-fields true
+	$(Q)$(YQ) w --inplace ./crds/operators.coreos.com_clusterserviceversions.yaml spec.versions[0].schema.openAPIV3Schema.properties.spec.properties.install.properties.spec.properties.deployments.items.properties.spec.properties.template.properties.metadata.x-kubernetes-preserve-unknown-fields true
+
+	@# Remove status subresource from the CRD manifests to ensure server-side apply works
+	$(Q)for f in ./crds/*.yaml ; do $(YQ) d --inplace $$f status; done
 
 	@# Update embedded CRD files.
-	@go generate ./crds/...
+	$(Q)go generate ./crds/...
 
 # Static tests.
 .PHONY: test test-unit
