Remove failfast from operator e2e test
The operator e2e test would like to resume testing regardless of
some operators failed to install. This commit drops the failfast
cmd in the make file which is called by the ci periodic job.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 765ec84a35015a39dd84f698e81f0fccfde6daac

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -139,7 +139,7 @@ e2e-local-docker:
 	. ./scripts/run_e2e_docker.sh $(TEST)
 
 e2e-operator-metrics:
-	go test -v $(MOD_FLAGS) -failfast -timeout 70m ./test/rh-operators/...
+	go test -v $(MOD_FLAGS) -timeout 70m ./test/rh-operators/...
 
 vendor:
 	go mod tidy
