Update ocp manifests with latest template
Use latest templated node selector key, replace beta.kubernetes.io/os
with kubernetes.io/os

Upstream-repository: operator-lifecycle-manager
Upstream-commit: e04805b207a16bee891c6bc806517327ed3c86dc

--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_07-olm-operator.deployment.yaml
@@ -77,7 +77,7 @@ spec:
           secretName: olm-operator-serving-cert
       
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
         node-role.kubernetes.io/master: ""
       tolerations:
       - effect: NoSchedule
