--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -72,7 +72,7 @@ spec:
           secretName: catalog-operator-serving-cert
       
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
         node-role.kubernetes.io/master: ""
       tolerations:
       - effect: NoSchedule
