--- a/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
+++ b/staging/operator-lifecycle-manager/manifests/0000_50_olm_15-packageserver.clusterserviceversion.yaml
@@ -81,7 +81,7 @@ spec:
               serviceAccountName: olm-operator-serviceaccount
               priorityClassName: "system-cluster-critical"
               nodeSelector:
-                beta.kubernetes.io/os: linux
+                kubernetes.io/os: linux
                 node-role.kubernetes.io/master: ""
               tolerations:
               - effect: NoSchedule
