Add flake analyzer
This commit introduces the flake analyzer to OLM to create weekly flake reports for the past and previous 7 days plus today. The result will be uploaded to GITHUB as artifacts.

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 1e8e896ed290d93c624a6174cab1efa5c785411b

--- a/staging/operator-lifecycle-manager/.github/workflows/e2e-tests.yml
+++ b/staging/operator-lifecycle-manager/.github/workflows/e2e-tests.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: make -f x.mk e2e-local NODES=2 JUNIT_DIRECTORY=./artifacts/
-      - name: Archive production artifacts # test results are only uploaded if any of the e2e tests fails
+      - name: Archive Test Artifacts # test results are only uploaded if any of the e2e tests fails
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
