manifests,scripts: Fix environment variable not being evaluated

--- a/manifests/0000_50_olm-06-psm-operator.deployment.yaml
+++ b/manifests/0000_50_olm-06-psm-operator.deployment.yaml
@@ -31,9 +31,9 @@ spec:
             - start
           args:
             - --name
-            - $PACKAGESERVER_NAME
+            - $(PACKAGESERVER_NAME)
             - --namespace
-            - $PACKAGESERVER_NAMESPACE
+            - $(PACKAGESERVER_NAMESPACE)
           image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
           imagePullPolicy: IfNotPresent
           env:
