Introduce continuous profiling
This commit introduces a cronJob which extracts heap profiles
from the OLM and Catalog Operator deployments from exposed services.
These heap profiles are then saved in configMaps in the
openshift-operator-lifecycle-manager namespace.

Requests against the aformentioned services are made using an HTTPS
request. The client certificate used by the cronJob is recycled with
each run.

Co-authored-by: Vu Dinh <vudinh@outlook.com>
Co-authored-by: Ben Luddy <bluddy@redhat.com>
Signed-off-by: Alexander Greene <greene.al1991@gmail.com>

--- a/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
@@ -28,10 +28,7 @@ spec:
             secretName: catalog-operator-serving-cert
         - name: profile-collector-cert
           secret:
-            secretName: catalog-operator-serving-cert
-        - name: serving-cert
-          secret:
-            secretName: catalog-operator-serving-cert
+            secretName: pprof-cert
       containers:
         - name: catalog-operator
           volumeMounts:
@@ -41,8 +38,6 @@ spec:
             - name: profile-collector-cert
               mountPath: "/profile-collector-cert"
               readOnly: true
-            - mountPath: /var/run/secrets/serving-cert
-              name: serving-cert
           command:
             - /bin/catalog
           args:
