--- a/manifests/0000_50_olm_07-olm-operator.deployment.yaml
+++ b/manifests/0000_50_olm_07-olm-operator.deployment.yaml
@@ -29,10 +29,7 @@ spec:
             secretName: olm-operator-serving-cert
         - name: profile-collector-cert
           secret:
-            secretName: olm-operator-serving-cert
-        - name: serving-cert
-          secret:
-            secretName: olm-operator-serving-cert
+            secretName: pprof-cert
       containers:
         - name: olm-operator
           volumeMounts:
@@ -42,8 +39,6 @@ spec:
             - name: profile-collector-cert
               mountPath: "/profile-collector-cert"
               readOnly: true
-            - mountPath: /var/run/secrets/serving-cert
-              name: serving-cert
           command:
             - /bin/olm
           args:
