--- a/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
@@ -34,25 +34,20 @@ spec:
             - quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
             - -writeStatusName
             - operator-lifecycle-manager-catalog
-            - -tls-cert
-            - /var/run/secrets/serving-cert/tls.crt
-            - -tls-key
-            - /var/run/secrets/serving-cert/tls.key
           image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-            - containerPort: 8081
-              name: metrics
-              protocol: TCP
           livenessProbe:
             httpGet:
               path: /healthz
               port: 8080
+              scheme: HTTP
           readinessProbe:
             httpGet:
               path: /healthz
               port: 8080
+              scheme: HTTP
           terminationMessagePolicy: FallbackToLogsOnError
           resources:
             requests:
