--- a/values.yaml
+++ b/values.yaml
@@ -13,7 +13,8 @@ olm:
     ref: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
     pullPolicy: IfNotPresent
   service:
-    internalPort: 8080
+    internalPort: 8443
+    externalPort: 8443
   nodeSelector:
     kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
@@ -41,7 +42,8 @@ catalog:
     ref: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
     pullPolicy: IfNotPresent
   service:
-    internalPort: 8080
+    internalPort: 8443
+    externalPort: 8443
   nodeSelector:
     kubernetes.io/os: linux
     node-role.kubernetes.io/master: ""
