--- a/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.yaml
@@ -55,12 +55,12 @@ spec:
             httpGet:
               path: /healthz
               port: 8443
-              scheme: HTTPS
+              scheme: HTTP
           readinessProbe:
             httpGet:
               path: /healthz
               port: 8443
-              scheme: HTTPS
+              scheme: HTTP
           terminationMessagePolicy: FallbackToLogsOnError
           resources:
             requests:
