Update getMetricsFromPort to infer port number
Problem: The getMetricsFromPod function assumes that metrics are exposed
on port 8080. This function fails to retrieve metrics from the olm or
catalog operator when the port is changed.

Solution: Name the port in each of the deployments and update the
getMetricsFromPod function to infer the port number from the
deployments.

Signed-off-by: Alexander Greene <greene.al1991@gmail.com>

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 08a1d4b2f06fda1a6d6b4cadf779e1ce2259af3e

--- a/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_08-catalog-operator.deployment.ibm-cloud-managed.yaml
@@ -64,6 +64,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8443
+              name: metrics
           livenessProbe:
             httpGet:
               path: /healthz
