--- a/manifests/0000_50_olm_07-olm-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_07-olm-operator.deployment.ibm-cloud-managed.yaml
@@ -62,6 +62,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8443
+              name: metrics
           livenessProbe:
             httpGet:
               path: /healthz
