pkg,scripts: Ensure the PackageServer CSV contains a hard pod anti-affinity configuration
Ensure the PackageServer CSV resource follows the recommended normal/HA
OCP cluster pod anti affinity configuration so multiple replicas get
placed on different nodes.

For more information on HA/non-HA expectations:

- https://github.com/openshift/enhancements/blob/master/CONVENTIONS.md#high-availability

Update the scripts/packageserver-deployment.patch.yaml to ensure that
the default (e.g. HA) PackageServer CSV resource matches those outlined
conventions.

--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -141,6 +141,16 @@ spec:
                   - name: tmpfs
                     emptyDir: {}
                 priorityClassName: system-cluster-critical
+                affinity:
+                  podAntiAffinity:
+                    requiredDuringSchedulingIgnoredDuringExecution:
+                      - labelSelector:
+                          matchExpressions:
+                            - key: app
+                              operator: In
+                              values:
+                                - packageserver
+                        topologyKey: "kubernetes.io/hostname"
   maturity: alpha
   version: 0.18.3
   apiservicedefinitions:
