[Speculative] fix catalog deployment
Signed-off-by: perdasilva <perdasilva@redhat.com>

--- a/values.yaml
+++ b/values.yaml
@@ -38,7 +38,7 @@ olm:
       memory: 160Mi
 catalog:
   replicaCount: 1
-  opmImageArgs: -opmImage=quay.io/operator-framework/configmap-operator-registry:latest
+  opmImageArgs: --opmImage=quay.io/operator-framework/configmap-operator-registry:latest
   image:
     ref: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
     pullPolicy: IfNotPresent
