--- a/pkg/manifests/csv.yaml
+++ b/pkg/manifests/csv.yaml
@@ -136,6 +136,10 @@ spec:
                     volumeMounts:
                       - name: tmpfs
                         mountPath: /tmp
+                    securityContext:
+                      allowPrivilegeEscalation: false
+                      capabilities:
+                        drop: ["ALL"]
                 volumes:
                   - name: tmpfs
                     emptyDir: {}
@@ -150,6 +154,11 @@ spec:
                               values:
                                 - packageserver
                         topologyKey: "kubernetes.io/hostname"
+                securityContext:
+                  runAsNonRoot: true
+                  runAsUser: 65534
+                  seccompProfile:
+                    type: RuntimeDefault
   maturity: alpha
   version: 0.19.0
   apiservicedefinitions:
