Update resources for restricted-v2 profile
Signed-off-by: perdasilva <perdasilva@redhat.com>

--- a/manifests/0000_50_olm_00-namespace.yaml
+++ b/manifests/0000_50_olm_00-namespace.yaml
@@ -4,7 +4,7 @@ metadata:
   name: openshift-operator-lifecycle-manager
   labels:
     pod-security.kubernetes.io/enforce: restricted
-    openshift.io/scc: "anyuid"
+    openshift.io/scc: "restricted-v2"
     openshift.io/cluster-monitoring: "true"
   annotations:
     openshift.io/node-selector: ""
@@ -18,7 +18,7 @@ metadata:
   name: openshift-operators
   labels:
     pod-security.kubernetes.io/enforce: restricted
-    openshift.io/scc: "anyuid"
+    openshift.io/scc: "restricted-v2"
   annotations:
     openshift.io/node-selector: ""
     workload.openshift.io/allowed: "management"
