opm serve: use pre-existing cache, if set and up-to-date (#1005)
* opm serve: use pre-existing cache, if set and up-to-date

Signed-off-by: Joe Lanford <joe.lanford@gmail.com>

* refactor to leave NewQuerier function untouched

Signed-off-by: Joe Lanford <joe.lanford@gmail.com>

Signed-off-by: Joe Lanford <joe.lanford@gmail.com>
Upstream-repository: operator-registry
Upstream-commit: 494b68e62a814a891821aeb2bd28f33abc1624ff

--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,6 @@ scripts/**/*.crc.e2e.patch.yaml
 
 # downstream sync sha files
 *.cherrypick
+
+# ignore temp artifacts of building operator-registry images
+vendor/github.com/operator-framework/operator-registry/pkg/lib/indexer/index.Dockerfile*
